--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -11,3 +11,7 @@
     font-family: 'Love Ya Like A Sister', Arial, sans-serif !important;
     color: red !important ;
 }
+
+li {
+    list-style-type: circle !important
+}
