--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,18 +14,24 @@
                 <div class="parallax"><img src="img/coccinelle-4.jpg"></div>
                 <div class="container">
                     <div class="row center">
-                    <h5 class="header col s12 light"># AmapetiteCagette
-
-                        Une AMAP bio à Chartres</h5>
+                        <img src="img/logo_cagette_couleur_tr.png">
+                    <h3 class="header col s12 light"> AmapetiteCagette <br/>
+                        Une AMAP bio à Chartres</h3>
                     </div>
                 </div>              
             </div>
         
         
-        
-            <div class="col s6 offset-s3"><span class="flow-text">
+            <div class="container">
+                <div class="col  m2 l1">
+                    </div>
+                <div class="col s12 m8 l9">
+                    <p class="card-text">{{ .Content }}</p>
+                    </div>
+            </div>
+            <!-- <div class="col s6 offset-s3"><span class="flow-text">
                 {{.Content}}
-            </span></div>
+            </span></div> -->
         </div>
     
         {{- partial "footer.html" . -}}
