--- a/layouts/partials/content_card_body_page.html
+++ b/layouts/partials/content_card_body_page.html
@@ -17,6 +17,7 @@
     <div class="row">
 
         <div class="col s12 m4 l3">
+            <img src="/img/logo_cagette_couleur_tr.png">
         </div>
         <div class="col s12 m8 l9">
         <p class="card-text">{{ .Content }}</p>
